# ForFun-2-GithubCI

./: .dockerignore  .gitignore  Dockerfile  GHCR_FIX.md  Makefile  README.md  SETUP_DEV.md  SSH_SETUP.md  TROUBLESHOOTING.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test-ssh.yml
app/: main.py
app/tests/: test_health.py
forfun_githubci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate-deploy-key.sh  show-ssh-info.sh  test-deployment-ready.sh  test-deployment.sh  test-ssh-connection.sh
